// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ZaakStatus > No query params passed 1`] = `
<DocumentFragment>
  <div
    class="mams-content-wrapper redacted"
  >
    <div
      class="ams-grid ams-grid--padding-top--large"
      id="page-breadcrumbs"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Status van uw aanvraag
                </span>
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <main
      id="page-main-content"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <h1
            class="ams-heading ams-heading--1 ams-mb-s"
          >
            Status van uw aanvraag
          </h1>
        </div>
      </div>
      <div
        class="ams-grid ams-grid--padding-bottom--x-large"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <p
            class="ams-paragraph"
          >
            <a
              class="ams-link _MaLink_10c0a4"
              href="/"
            >
              Ga naar het dashboard
            </a>
          </p>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`ZaakStatus > should show error alert 1`] = `
<DocumentFragment>
  <div
    class="mams-content-wrapper redacted"
  >
    <div
      class="ams-grid ams-grid--padding-top--large"
      id="page-breadcrumbs"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Status van uw aanvraag
                </span>
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <main
      id="page-main-content"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <h1
            class="ams-heading ams-heading--1 ams-mb-s"
          >
            Status van uw aanvraag
          </h1>
        </div>
      </div>
      <div
        class="ams-grid ams-grid--padding-bottom--x-large"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <section
            aria-labelledby="ams-alert-heading"
            class="ams-alert ams-alert--error ams-mb-s"
          >
            <div
              class="ams-alert__severity-indicator"
            >
              <span
                class="ams-icon ams-icon--inverse ams-icon--heading-3"
                hidden=""
              >
                <svg
                  aria-hidden="true"
                  focusable="false"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="m22.879 12-5.44 9.422-10.877-.001L1.122 12 6.56 2.58h10.878zM12 10.586 8.856 7.442 7.442 8.856 10.586 12l-3.144 3.145 1.414 1.414L12 13.414l3.145 3.145 1.414-1.415L13.414 12l3.145-3.145-1.415-1.413z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="ams-alert__content"
            >
              <div
                class="ams-row ams-row--align-between ams-row--align-vertical-start"
              >
                <h4
                  class="ams-heading ams-heading--3"
                  id="ams-alert-heading"
                >
                  Foutmelding
                </h4>
              </div>
              <p
                class="ams-paragraph"
              >
                Wij kunnen nu niet alle gegevens tonen, probeer het later nog eens.
              </p>
            </div>
          </section>
          <p
            class="ams-paragraph"
          >
            <a
              class="ams-link _MaLink_10c0a4"
              href="/"
            >
              Ga naar het dashboard
            </a>
          </p>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`ZaakStatus > should show not found message 1`] = `
<DocumentFragment>
  <div
    class="mams-content-wrapper redacted"
  >
    <div
      class="ams-grid ams-grid--padding-top--large"
      id="page-breadcrumbs"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Status van uw aanvraag
                </span>
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <main
      id="page-main-content"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <h1
            class="ams-heading ams-heading--1 ams-mb-s"
          >
            Status van uw aanvraag
          </h1>
        </div>
      </div>
      <div
        class="ams-grid ams-grid--padding-bottom--x-large"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <p
            class="ams-paragraph ams-mb-s"
          >
            Wij kunnen de status van uw aanvraag niet laten zien.
          </p>
          <p
            class="ams-paragraph"
          >
            <a
              class="ams-link _MaLink_10c0a4"
              href="/vergunningen"
            >
              Bekijk het overzicht
            </a>
          </p>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;

exports[`ZaakStatus > should show wachten op betaling 1`] = `
<DocumentFragment>
  <div
    class="mams-content-wrapper redacted"
  >
    <div
      class="ams-grid ams-grid--padding-top--large"
      id="page-breadcrumbs"
    >
      <div
        class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
      >
        <nav
          class="ams-breadcrumb"
        >
          <ol
            class="ams-breadcrumb__list"
          >
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
              >
                Home
              </a>
            </li>
            <li
              class="ams-breadcrumb__item"
            >
              <a
                class="ams-breadcrumb__link"
                href="/"
                tabindex="-1"
              >
                <span
                  class="ams-visually-hidden"
                >
                  Status van uw aanvraag
                </span>
              </a>
            </li>
          </ol>
        </nav>
      </div>
    </div>
    <main
      id="page-main-content"
    >
      <div
        class="ams-grid"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <h1
            class="ams-heading ams-heading--1 ams-mb-s"
          >
            Status van uw aanvraag
          </h1>
        </div>
      </div>
      <div
        class="ams-grid ams-grid--padding-bottom--x-large"
      >
        <div
          class="ams-grid__cell ams-grid__cell--span-4 ams-grid__cell--span-8-medium ams-grid__cell--span-12-wide ams-grid__cell--start-1 ams-grid__cell--start-1-medium ams-grid__cell--start-1-wide"
        >
          <p
            class="ams-paragraph ams-mb-s"
          >
            Wij kunnen de status van uw aanvraag niet laten zien.
          </p>
          <p
            class="ams-paragraph ams-mb-s"
          >
            U heeft betaald voor deze aanvraag. Het kan even duren voordat uw aanvraag op Mijn Amsterdam te zien is.
          </p>
          <p
            class="ams-paragraph"
          >
            <a
              class="ams-link _MaLink_10c0a4"
              href="/vergunningen"
            >
              Bekijk het overzicht
            </a>
          </p>
        </div>
      </div>
    </main>
  </div>
</DocumentFragment>
`;
